@@ -10,26 +10,23 @@ import com.ustadmobile.core.db.dao.ContentEntryFileDao;
 import com.ustadmobile.core.db.dao.ContentEntryFileStatusDao;
 import com.ustadmobile.core.db.dao.LanguageDao;
 import com.ustadmobile.lib.contentscrapers.ContentScraperUtil;
-import com.ustadmobile.lib.contentscrapers.ScraperConstants;
+import com.ustadmobile.lib.contentscrapers.UMLogUtil;
 import com.ustadmobile.lib.db.entities.ContentCategory;
 import com.ustadmobile.lib.db.entities.ContentCategorySchema;
 import com.ustadmobile.lib.db.entities.ContentEntry;
-import com.ustadmobile.lib.db.entities.ContentEntryContentEntryFileJoin;
-import com.ustadmobile.lib.db.entities.ContentEntryFile;
-import com.ustadmobile.lib.db.entities.ContentEntryFileStatus;
 import com.ustadmobile.lib.db.entities.Language;
 
-import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.lang.exception.ExceptionUtils;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
+import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -39,6 +36,7 @@ import java.nio.file.Files;
 import java.util.ArrayList;
 
 import static com.ustadmobile.lib.contentscrapers.ScraperConstants.EMPTY_STRING;
+import static com.ustadmobile.lib.contentscrapers.ScraperConstants.REQUEST_HEAD;
 import static com.ustadmobile.lib.contentscrapers.ddl.IndexDdlContent.DDL;
 import static com.ustadmobile.lib.db.entities.ContentEntry.LICENSE_TYPE_CC_BY;
 
@@ -71,12 +69,11 @@ public class DdlContentScraper {
         this.url = new URL(url);
         destinationDirectory.mkdirs();
         UmAppDatabase db = UmAppDatabase.getInstance(null);
-        db.setMaster(true);
         UmAppDatabase repository = db.getRepository("https://localhost", "");
         contentEntryDao = repository.getContentEntryDao();
         contentEntryFileDao = repository.getContentEntryFileDao();
         contentEntryFileJoinDao = repository.getContentEntryContentEntryFileJoinDao();
-        contentFileStatusDao = repository.getContentEntryFileStatusDao();
+        contentFileStatusDao = db.getContentEntryFileStatusDao();
         categorySchemaDao = repository.getContentCategorySchemaDao();
         contentCategoryDao = repository.getContentCategoryDao();
         languageDao = repository.getLanguageDao();
@@ -84,24 +81,24 @@ public class DdlContentScraper {
 
 
     public static void main(String[] args) throws URISyntaxException {
-        if (args.length != 2) {
-            System.err.println("Usage: <ddl website url> <file destination>");
+        if (args.length < 2) {
+            System.err.println("Usage: <ddl website url> <file destination><optional log{trace, debug, info, warn, error, fatal}>");
             System.exit(1);
         }
-
-        System.out.println(args[0]);
-        System.out.println(args[1]);
+        UMLogUtil.setLevel(args.length == 3 ? args[2] : "");
+        UMLogUtil.logInfo(args[0]);
+        UMLogUtil.logInfo(args[1]);
         try {
             new DdlContentScraper(args[0], new File(args[1])).scrapeContent();
         } catch (IOException e) {
-            System.err.println("Exception running scrapeContent");
-            e.printStackTrace();
+            UMLogUtil.logError(ExceptionUtils.getStackTrace(e));
+            UMLogUtil.logError("Exception running scrapeContent ddl");
         }
 
     }
 
 
-    public void scrapeContent() throws IOException, URISyntaxException {
+    public void scrapeContent() throws IOException {
 
         File resourceFolder = new File(destinationDirectory, FilenameUtils.getBaseName(urlString));
         resourceFolder.mkdirs();
@@ -110,51 +107,60 @@ public class DdlContentScraper {
 
         Elements downloadList = doc.select("span.download-item a[href]");
 
-        contentEntries = new ArrayList<>();;
+        String thumbnail = doc.selectFirst("aside img").attr("src");
+
+        String lang = doc.select("html").attr("lang");
+        Language langEntity = ContentScraperUtil.insertOrUpdateLanguageByName(languageDao, LanguageCode.getByCode(lang).getName());
+        String description = doc.selectFirst("meta[name=description]").attr("content");
+        Element authorTag = doc.selectFirst("article.resource-view-details h3:contains(Author) ~ p");
+        String author = authorTag != null ? authorTag.text() : "";
+        Element publisherTag = doc.selectFirst("article.resource-view-details h3:contains(Publisher) ~ p");
+        String publisher = publisherTag != null ? publisherTag.text() : "";
+
+
+        ContentEntry contentEntry = ContentScraperUtil.createOrUpdateContentEntry(urlString, doc.title(),
+                urlString, (publisher != null && !publisher.isEmpty() ? publisher : DDL),
+                LICENSE_TYPE_CC_BY, langEntity.getLangUid(), null, description, true, author,
+                thumbnail, EMPTY_STRING, EMPTY_STRING, contentEntryDao);
+
+
+        contentEntries = new ArrayList<>();
         for (int downloadCount = 0; downloadCount < downloadList.size(); downloadCount++) {
 
             Element downloadItem = downloadList.get(downloadCount);
-
             String href = downloadItem.attr("href");
-            URL fileUrl = new URL(url, href);
-            // this was done to encode url that had empty spaces in the name or other illegal characters
-            URI uri = new URI(fileUrl.getProtocol(), fileUrl.getUserInfo(), fileUrl.getHost(), fileUrl.getPort(), fileUrl.getPath(), fileUrl.getQuery(), fileUrl.getRef());
+            HttpURLConnection conn = null;
+            try {
+                URL fileUrl = new URL(url, href);
 
-            String thumbnail = doc.selectFirst("aside img").attr("src");
+                // this was done to encode url that had empty spaces in the name or other illegal characters
+                URI uri = new URI(fileUrl.getProtocol(), fileUrl.getUserInfo(), fileUrl.getHost(), fileUrl.getPort(), fileUrl.getPath(), fileUrl.getQuery(), fileUrl.getRef());
 
-            String lang = doc.select("html").attr("lang");
-            Language langEntity = ContentScraperUtil.insertOrUpdateLanguage(languageDao, LanguageCode.getByCode(lang).getName());
-            String description = doc.selectFirst("meta[name=description]").attr("content");
-            Element authorTag = doc.selectFirst("article.resource-view-details h3:contains(Author) ~ p");
-            String author = authorTag != null ? authorTag.text() : "";
-            Element publisherTag = doc.selectFirst("article.resource-view-details h3:contains(Publisher) ~ p");
-            String publisher = publisherTag != null ? publisherTag.text() : "";
+                conn = (HttpURLConnection) uri.toURL().openConnection();
+                conn.setRequestMethod(REQUEST_HEAD);
+                File resourceFile = new File(resourceFolder, FilenameUtils.getName(href));
+                String mimeType = Files.probeContentType(resourceFile.toPath());
 
+                if (!ContentScraperUtil.isFileModified(conn, resourceFolder, FilenameUtils.getName(href)) && ContentScraperUtil.fileHasContent(resourceFile)) {
 
-            ContentEntry contentEntry = ContentScraperUtil.createOrUpdateContentEntry(uri.toString(), doc.title(),
-                    uri.toURL().getPath(), (publisher != null && !publisher.isEmpty() ? publisher : DDL),
-                    LICENSE_TYPE_CC_BY, langEntity.getLangUid(), null, description, true, author,
-                    thumbnail, EMPTY_STRING, EMPTY_STRING, contentEntryDao);
+                    ContentScraperUtil.checkAndUpdateDatabaseIfFileDownloadedButNoDataFound(resourceFile, contentEntry, contentEntryFileDao,
+                            contentEntryFileJoinDao, contentFileStatusDao, mimeType, true);
+                    continue;
+                }
 
+                FileUtils.copyURLToFile(uri.toURL(), resourceFile);
 
-            URLConnection conn = uri.toURL().openConnection();
-            File resourceFile = new File(resourceFolder, FilenameUtils.getName(href));
-            String mimeType = Files.probeContentType(resourceFile.toPath());
+                ContentScraperUtil.insertContentEntryFile(resourceFile, contentEntryFileDao, contentFileStatusDao, contentEntry,
+                        ContentScraperUtil.getMd5(resourceFile), contentEntryFileJoinDao, true, mimeType);
 
-            if (!ContentScraperUtil.isFileModified(conn, resourceFolder, FilenameUtils.getName(href))) {
-
-                ContentScraperUtil.checkAndUpdateDatabaseIfFileDownloadedButNoDataFound(resourceFile, contentEntry, contentEntryFileDao,
-                        contentEntryFileJoinDao, contentFileStatusDao, mimeType, true);
-                continue;
+                contentEntries.add(contentEntry);
+            } catch(Exception e){
+                UMLogUtil.logError("Error downloading resource from url " + url + "/" + href);
+            }finally {
+                if (conn != null) {
+                    conn.disconnect();
+                }
             }
-
-            FileUtils.copyURLToFile(uri.toURL(), resourceFile);
-
-
-            ContentScraperUtil.insertContentEntryFile(resourceFile, contentEntryFileDao, contentFileStatusDao, contentEntry,
-                    ContentScraperUtil.getMd5(resourceFile), contentEntryFileJoinDao, true, mimeType);
-
-            contentEntries.add(contentEntry);
         }
     }
 
@@ -174,7 +180,7 @@ public class DdlContentScraper {
             String href = subject.attr("href");
 
             String lang = doc.select("html").attr("lang");
-            Language langEntity = ContentScraperUtil.insertOrUpdateLanguage(languageDao, LanguageCode.getByCode(lang).getName());
+            Language langEntity = ContentScraperUtil.insertOrUpdateLanguageByName(languageDao, LanguageCode.getByCode(lang).getName());
 
 
             ContentEntry contentEntry = ContentScraperUtil.createOrUpdateContentEntry(href, title, href,
